unpackaged/main/default/objects/Order/fields/BillingContactLastName__c.field-meta.xml
<CustomField>
    <fullName>BillingContactLastName__c</fullName>
    <label>Billing Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>