unpackaged/main/default/objects/Order/fields/cegidCustomerId__c.field-meta.xml
<CustomField>
    <fullName>cegidCustomerId__c</fullName>
    <label>cegidCustomerId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>