unpackaged/main/default/objects/Order/fields/DeliverySignature__c.field-meta.xml
<CustomField>
    <fullName>DeliverySignature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Signature</label>
    <type>Checkbox</type>
</CustomField>