unpackaged/main/default/objects/Order/fields/geOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>geOrderNumber__c</fullName>
    <label>Global-e Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>