unpackaged/main/default/objects/Order/fields/Invoices__c.field-meta.xml
<CustomField>
    <fullName>Invoices__c</fullName>
    <label>Invoices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>