unpackaged/main/default/objects/Order/fields/isLegacyOrder__c.field-meta.xml
<CustomField>
    <fullName>isLegacyOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLegacyOrder</label>
    <type>Checkbox</type>
</CustomField>