unpackaged/main/default/objects/Order/fields/isOrderOnBehalf__c.field-meta.xml
<CustomField>
    <fullName>isOrderOnBehalf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Order On Behalf</label>
    <type>Checkbox</type>
</CustomField>