unpackaged/main/default/objects/Order/fields/language__c.field-meta.xml
<CustomField>
    <fullName>language__c</fullName>
    <label>language</label>
    <length>8</length>
    <type>Text</type>
</CustomField>