unpackaged/main/default/objects/Order/fields/latestExpectedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>latestExpectedDeliveryDate__c</fullName>
    <label>Maximum delivery date</label>
    <type>DateTime</type>
</CustomField>