unpackaged/main/default/objects/Order/fields/OriginalOrder__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>