unpackaged/main/default/objects/Order/fields/OriginalReturnOrder__c.field-meta.xml
<CustomField>
    <fullName>OriginalReturnOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Return Order</label>
    <referenceTo>ReturnOrder</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>