unpackaged/main/default/objects/Order/fields/StoreOriginName__c.field-meta.xml
<CustomField>
    <fullName>StoreOriginName__c</fullName>
    <label>StoreOriginName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>