unpackaged/main/default/objects/Order/fields/StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>StreetNumber__c</fullName>
    <label>Street Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>