unpackaged/main/default/objects/Order/fields/Tech_CreateOS__c.field-meta.xml
<CustomField>
    <fullName>Tech_CreateOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_CreateOS</label>
    <type>Checkbox</type>
</CustomField>