unpackaged/main/default/objects/Order/fields/TECH_OS_Field__c.field-meta.xml
<CustomField>
    <fullName>TECH_OS_Field__c</fullName>
    <label>TECH_OS_Field</label>
    <summaryForeignKey>OrderSummary.OriginalOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField> 